made some additional changes to the gravity module.

--- a/docs/source/_notebooks/examples/FirstJourney.ipynb
+++ b/docs/source/_notebooks/examples/FirstJourney.ipynb
@@ -320,7 +320,7 @@
     "cgparams[\"plotting\"][\"defaults\"][\n",
     "    \"text.usetex\"\n",
     "] = True  # Not necessary, just to make the plots look nice.\n",
-    "f, a = galaxy_cluster_model.panel_plot(base_length=3, aspect_ratio=1.2)"
+    "f, a = galaxy_cluster_model.panel_plot(subplot_size=3)"
    ]
   },
   {
